--- a/index.html
+++ b/index.html
@@ -45,10 +45,50 @@
                           <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                           <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                          <div class="drops pt-5 pb-3 text-center">
-                            <img src="img/play-menu-ico.png" alt="ps5">
-                            <img src="img/play-menu-ico.png" alt="ps5">
-                            <img src="img/play-menu-ico.png" alt="ps5">
+                          <div class="drops py-3 text-center">
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+                              <div class="drop-item">
+                                <img src="img/play-menu-ico.png" alt="ps5">
+                                <div class="black">PS5</div>
+                              </div>
+
+
+                              <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                  <ul>
+                                      <li>PlayStation Indies</li>
+                                      <li>Promozioni e offerte</li>
+                                      <li>PlayStation Hits</li>
+                                      <li>PlayLink</li>
+                                  </ul>
+
+                              </div>
+
                           </div>
                       </a>
                     </li>
@@ -57,6 +97,52 @@
                       <a class="nav-link" href="#">Hardware
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                        <div class="drops py-3 text-center">
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+
+                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                <ul>
+                                    <li>PlayStation Indies</li>
+                                    <li>Promozioni e offerte</li>
+                                    <li>PlayStation Hits</li>
+                                    <li>PlayLink</li>
+                                </ul>
+
+                            </div>
+
+                        </div>
                       </a>
                     </li>
   
@@ -64,6 +150,52 @@
                       <a class="nav-link" href="#">Servizi
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                        <div class="drops py-3 text-center">
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+
+                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                <ul>
+                                    <li>PlayStation Indies</li>
+                                    <li>Promozioni e offerte</li>
+                                    <li>PlayStation Hits</li>
+                                    <li>PlayLink</li>
+                                </ul>
+
+                            </div>
+
+                        </div>
                       </a>
                     </li>
   
@@ -71,6 +203,52 @@
                       <a class="nav-link" href="#">Novità
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                        <div class="drops py-3 text-center">
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+
+                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                <ul>
+                                    <li>PlayStation Indies</li>
+                                    <li>Promozioni e offerte</li>
+                                    <li>PlayStation Hits</li>
+                                    <li>PlayLink</li>
+                                </ul>
+
+                            </div>
+
+                        </div>
                       </a>
                     </li>
   
@@ -78,6 +256,52 @@
                       <a class="nav-link" href="#">Fai acquisti
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                        <div class="drops py-3 text-center">
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+
+                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                <ul>
+                                    <li>PlayStation Indies</li>
+                                    <li>Promozioni e offerte</li>
+                                    <li>PlayStation Hits</li>
+                                    <li>PlayLink</li>
+                                </ul>
+
+                            </div>
+
+                        </div>
                       </a>
                     </li>
   
@@ -85,6 +309,52 @@
                       <a class="nav-link" href="#">Supporto
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                        <div class="drops py-3 text-center">
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+                            <div class="drop-item">
+                              <img src="img/play-menu-ico.png" alt="ps5">
+                              <div class="black">PS5</div>
+                            </div>
+
+
+                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
+
+                                <ul>
+                                    <li>PlayStation Indies</li>
+                                    <li>Promozioni e offerte</li>
+                                    <li>PlayStation Hits</li>
+                                    <li>PlayLink</li>
+                                </ul>
+
+                            </div>
+
+                        </div>
                       </a>
                     </li>
                     
@@ -96,6 +366,52 @@
                         <a class="nav-link chevron_nav"  href="#">My PlayStation
                             <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                             <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+
+                            <div class="drops py-3 text-center">
+
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+  
+                                <div class="drop-bottom pt-3 pb-2 mt-4 black">
+  
+                                    <ul>
+                                        <li>PlayStation Indies</li>
+                                        <li>Promozioni e offerte</li>
+                                        <li>PlayStation Hits</li>
+                                        <li>PlayLink</li>
+                                    </ul>
+  
+                                </div>
+  
+                            </div>
                         </a>
                       </li>
   
