dropdown mobile (parz)

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
             <div class="w-100 d-lg-flex justify-content-lg-between align-items-center">
 
-                <ul class="navbar-nav d-flex align-items-center">
+                <ul class="navbar-nav d-flex align-items-lg-center fit-cont">
 
                     <li class="nav-item">
                       <a class="nav-link"  href="#">Giochi
                           <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                           <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                          <div class="drops py-3 text-center">
+                          <div class="drops py-3 text-lg-center">
 
                               <div class="drop-item">
                                 <img src="img/play-menu-ico.png" alt="ps5">
@@ -94,64 +94,64 @@
                     </li>
   
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Hardware
-                        <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
-                        <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
-
-                        <div class="drops py-3 text-center">
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
+                        <a class="nav-link"  href="#">Hardware
+                            <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
+                            <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
+  
+                            <div class="drops py-3 text-lg-center">
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+                                <div class="drop-item">
+                                  <img src="img/play-menu-ico.png" alt="ps5">
+                                  <div class="black">PS5</div>
+                                </div>
+  
+  
+                                <div class="drop-bottom pt-3 pb-2 mt-4 black">
+  
+                                    <ul>
+                                        <li>PlayStation Indies</li>
+                                        <li>Promozioni e offerte</li>
+                                        <li>PlayStation Hits</li>
+                                        <li>PlayLink</li>
+                                    </ul>
+  
+                                </div>
+  
                             </div>
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
-                            </div>
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
-                            </div>
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
-                            </div>
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
-                            </div>
-
-                            <div class="drop-item">
-                              <img src="img/play-menu-ico.png" alt="ps5">
-                              <div class="black">PS5</div>
-                            </div>
-
-
-                            <div class="drop-bottom pt-3 pb-2 mt-4 black">
-
-                                <ul>
-                                    <li>PlayStation Indies</li>
-                                    <li>Promozioni e offerte</li>
-                                    <li>PlayStation Hits</li>
-                                    <li>PlayLink</li>
-                                </ul>
-
-                            </div>
-
-                        </div>
-                      </a>
-                    </li>
+                        </a>
+                      </li>
   
                     <li class="nav-item">
                       <a class="nav-link" href="#">Servizi
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                        <div class="drops py-3 text-center">
+                        <div class="drops py-3 text-lg-center">
 
                             <div class="drop-item">
                               <img src="img/play-menu-ico.png" alt="ps5">
@@ -204,7 +204,7 @@
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                        <div class="drops py-3 text-center">
+                        <div class="drops py-3 text-lg-center">
 
                             <div class="drop-item">
                               <img src="img/play-menu-ico.png" alt="ps5">
@@ -257,7 +257,7 @@
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                        <div class="drops py-3 text-center">
+                        <div class="drops py-3 text-lg-center">
 
                             <div class="drop-item">
                               <img src="img/play-menu-ico.png" alt="ps5">
@@ -310,7 +310,7 @@
                         <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                         <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                        <div class="drops py-3 text-center">
+                        <div class="drops py-3 text-lg-center">
 
                             <div class="drop-item">
                               <img src="img/play-menu-ico.png" alt="ps5">
@@ -360,14 +360,14 @@
                     
                   </ul>
   
-                  <ul class="navbar-nav d-flex align-items-center">
+                <ul class="navbar-nav d-flex align-items-lg-center fit-cont">
   
                       <li class="nav-item">
                         <a class="nav-link chevron_nav"  href="#">My PlayStation
                             <img src="img/chevron-down-solid.svg" alt="chevron down" class="chevron hide-hov ms-2">
                             <img src="img/chevron-down-solid-hover.svg" alt="chevron down blue" class="chevron ms-2 show-hov">
 
-                            <div class="drops py-3 text-center">
+                            <div class="drops py-3 text-lg-center">
 
                                 <div class="drop-item">
                                   <img src="img/play-menu-ico.png" alt="ps5">
@@ -431,7 +431,7 @@
                           </a>
                       </li>  
                       
-                  </ul>
+                </ul>
             </div>
 
           </div>
@@ -778,17 +778,17 @@
                         tutti in un unico posto.</div>
                 </div>
 
-                <div class="row mt-5 gy-3">
+                <div class="row row-cols-1 row-cols-md-3 mt-5 gy-3">
 
-                    <div class="col-12 col-md-4">
+                    <div class="col">
                         <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="ps games under 20">
                     </div>
 
-                    <div class="col-12 col-md-4">
+                    <div class="col">
                         <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="ps golden week sale">
                     </div>
 
-                    <div class="col-12 col-md-4">
+                    <div class="col">
                         <img src="img/playstation-store-free-to-play-spotlight.png" alt="ps free to play">
                     </div>
 
