--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 <h3>Nuove uscite</h3>
                 <h4 class="mt-3">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
 
-                <div class="row g-5 my-1">
+                <div class="row gy-4 my-1">
 
                     <div class="col-6 col-sm-4 col-lg-2">
                         <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks pro skater">
